--- a/BMI-Calculator/Base.lproj/Main.storyboard
+++ b/BMI-Calculator/Base.lproj/Main.storyboard
@@ -74,6 +74,20 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yhb-ci-aC8">
+                                <rect key="frame" x="332" y="481" width="30" height="25"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="CPg-FU-yaG"/>
+                                    <constraint firstAttribute="height" constant="25" id="lBC-z1-Byx"/>
+                                </constraints>
+                                <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button" image="eye.slash" catalog="system"/>
+                                <connections>
+                                    <action selector="hiddenButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Oae-lK-pEw"/>
+                                </connections>
+                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qwm-l1-MvY">
                                 <rect key="frame" x="30" y="645.33333333333337" width="333" height="55"/>
                                 <constraints>
@@ -102,6 +116,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="aiQ-v1-Z8y" firstAttribute="top" secondItem="cqV-82-LZH" secondAttribute="bottom" constant="18" id="1DU-kh-Oya"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Yhb-ci-aC8" secondAttribute="trailing" constant="31" id="3A8-ED-P9E"/>
                             <constraint firstItem="EeL-Yc-4WK" firstAttribute="top" secondItem="6fJ-Xd-2fg" secondAttribute="bottom" constant="5" id="3DU-ml-a8c"/>
                             <constraint firstItem="EeL-Yc-4WK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="8Sm-yB-r9u"/>
                             <constraint firstItem="Qwm-l1-MvY" firstAttribute="top" secondItem="nOP-nG-HFD" secondAttribute="bottom" constant="85" id="Bqv-hG-Qc4"/>
@@ -117,6 +132,7 @@
                             <constraint firstItem="cqV-82-LZH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="44" id="hM5-f1-SI3"/>
                             <constraint firstItem="4Lp-CV-he5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="44" id="j3X-pT-PcZ"/>
                             <constraint firstItem="Qwm-l1-MvY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="kAZ-EN-hSb"/>
+                            <constraint firstItem="Yhb-ci-aC8" firstAttribute="top" secondItem="EeL-Yc-4WK" secondAttribute="bottom" constant="-37.333333333333258" id="kFM-KC-HcB"/>
                             <constraint firstItem="XR0-au-g76" firstAttribute="top" secondItem="ziz-aU-W1t" secondAttribute="bottom" constant="5" id="l6z-SB-hQA"/>
                             <constraint firstItem="6fJ-Xd-2fg" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="35" id="nRS-xa-B7U"/>
                             <constraint firstItem="nOP-nG-HFD" firstAttribute="top" secondItem="EeL-Yc-4WK" secondAttribute="bottom" constant="7" id="tWP-nY-T4Q"/>
@@ -142,6 +158,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="eye.slash" catalog="system" width="128" height="95"/>
         <image name="image" width="147" height="229.33332824707031"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
